--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     <link type="text/css" href="{% static 'css/styles.css' %}" rel="stylesheet" />
-    <link rel="shortcut icon" type="image/png" href="http://localhost:9000/lab1/favicon.png" />
+    <!--<link rel="shortcut icon" type="image/png" href="http://localhost:9000/lab1/favicon.png" /> -->
   </head>
   <body>
     {% block mainmenu %}
@@ -21,7 +21,7 @@
     <div class="space">{% block content %}{% endblock %}</div>
     <div class="article"></div>
     <div class="footer">
-        <div class="footer-menu">&copy; 2024 РИП Лаб. 1</div>
+        <div class="footer-menu">&copy; 2024</div> <!--  РИП Лаб. 1 -->
     </div>
   </body>
 </html>
