--- a/lab1/static/css/styles.css
+++ b/lab1/static/css/styles.css
@@ -172,11 +172,22 @@ a:hover {
     justify-content: start;
 }
 
+
 .image{
     width: 100%;
     height: 210px;
     border-radius: 0;
     object-fit: cover;
+    overflow: hidden;
+    transition: all .2s ease-in-out;
+    background-position: center;
+    background-size: 100%;
+    display: inline-block;
+}
+
+.image:hover {
+    background-size: 120%;
+     transform: scale(1.01);
 }
 
 .title{
@@ -206,6 +217,8 @@ a:hover {
 .button-primary:hover circle{
     opacity: 1;
 }
+
+
 
 /** ===========================
  *  detail.html
