--- a/lab1/templates/index.html
+++ b/lab1/templates/index.html
@@ -7,10 +7,11 @@
   <!--<h1>{{ title }}</h1>-->
   <div class="container-upper">
     <form method="get">
-        <label for="search_query"></label><input style="margin-right: 30px; color: grey" type="text" id="search_query" name="search_query" value="{{ search_query }}">
+        <label for="search_query"></label><input style="margin-right: 30px; color: grey" type="text" id="search_query"
+                                                 name="spaceobject" value="{{ search_query }}">
     </form>
     <div class="image-container">
-      <a href="{% url 'order' %}">
+      <a href="{% url 'order' 1 %}">
         <img src="http://localhost:9000/lab1/images/cart.png" alt="Cart Image">
         <div class="text-overlay">{{ count }}</div>
       </a>
@@ -32,7 +33,7 @@
         Цена: {{ p.price }}$/кг<p>Старт {{ p.start }}</p>
         {% endautoescape %}
         <p>
-          <a href="{% url 'detail' p.id %}" class="button-primary" style="font-size: 22px">О миссии "{{ p.mission }}"
+          <a href="{% url 'detail' p.id %}" class="button-primary" style="font-size: 22px">Читать далее о {{ p.title }}
             <svg width="32px" height="32px" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
               <circle class="button-primary-circle" style="fill: red" cx="16" cy="16" r="8"></circle>
               <path style="fill: white" d="M8 16.956h12.604l-3.844 4.106 1.252 1.338L24 16l-5.988-6.4-1.252 1.338 3.844 4.106H8v1.912z"></path>
